crates/keron-lang/tests/corpus/errors/check/unknown_var.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown variable `unknown`
  --> 3:9
  |
3 | val b = unknown + a
  |         ^^^^^^^
